--- a/webroot/testPostUpdateUser.html
+++ b/webroot/testPostUpdateUser.html
@@ -13,10 +13,10 @@
                 data: {
                     id: 1,
                     extId: 1,
-                    firstName: "Svetoslav",
-                    lastName: "Bozhinov",
-                    position: "Charter",
-                    team : "Charting",
+                    firstName: "Grigor",
+                    lastName: "Dimitrov",
+                    position: "DP",
+                    team : "Future thinking",
                     startDate : "05/05/2014",
                     birthday: "12/10/1993"
                 },
