--- a/webroot/testGet.html
+++ b/webroot/testGet.html
@@ -6,15 +6,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
-                $.ajax({url: "../employees/list", success: function(result){
+                $.ajax({url: "http://q1q1.eu/employees/employees/list", success: function(result){
                     $("#div1").html(result);
                     console.log(jQuery.parseJSON(result));
                 }});
 
-            $.ajax({url: "../employees/getemployee/1", success: function(result){
-                $("#div1").html(result);
-                console.log(jQuery.parseJSON(result));
-            }});
+//            $.ajax({url: "../employees/getemployee/1", success: function(result){
+//                $("#div1").html(result);
+//                console.log(jQuery.parseJSON(result));
+//            }});
             });
     </script>
 </head>
