--- a/webroot/testPost.html
+++ b/webroot/testPost.html
@@ -9,18 +9,19 @@
 
             $.ajax({
                 type: 'POST',
-                url: '../employees/addemployee',
+                url: 'http://q1q1.eu/employees/employees/addemployee',
                 data: {
-                    extId: 1,
-                    firstName: "Svetoslav",
-                    lastName: "Bozhinov",
-                    position: "Charter",
-                    team : "Charting",
-                    startDate : "05/05/2014",
-                    birthday: "12/10/1993"
+                    extId: 4,
+                    firstName: "Zlatan",
+                    lastName: "Ibrahimovich",
+                    position: "Business analytics",
+                    team : "Business",
+                    startDate : "07/09/2016",
+                    birthday: "12/11/1987"
                     },
                 success: function(response) {
                     console.log(response);
+                    $("#div1").html(response);
                 }
             });
         });
