--- a/webroot/testPostUpdateUser.html
+++ b/webroot/testPostUpdateUser.html
@@ -9,7 +9,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: '../employees/updateemployee',
+                url: 'http://q1q1.eu/employees/employees/updateemployee',
                 data: {
                     id: 1,
                     extId: 1,
