--- a/webroot/testPost.html
+++ b/webroot/testPost.html
@@ -8,17 +8,20 @@
         $(document).ready(function(){
 
             $.ajax({
-                type: 'POST',
-                url: 'http://q1q1.eu/employees/employees/addemployee',
-                data: {
-                    extId: 4,
-                    firstName: "Zlatan",
-                    lastName: "Ibrahimovich",
-                    position: "Business analytics",
-                    team : "Business",
-                    startDate : "07/09/2016",
-                    birthday: "12/11/1987"
-                    },
+//                type: 'POST',
+                type: 'DELETE',
+//                url: 'http://q1q1.eu/employees/employees/addemployee',
+                url: '../employees/1',
+//                data: {
+//                    extId: 5,
+//                    firstName: "Rafael",
+//                    lastName: "Nadal",
+//                    position: "Business analytics",
+//                    team : "Business",
+//                    startDate : "07/09/2016",
+//                    birthday: "12/11/1987",
+//                    active: "yes"
+//                },
                 success: function(response) {
                     console.log(response);
                     $("#div1").html(response);
