--- a/webroot/testPostUpdateUser.html
+++ b/webroot/testPostUpdateUser.html
@@ -14,13 +14,13 @@
 //                data :  JSON.stringify({"newWeekEntry":{"MondayHours":2,"TuesdayHours":2,"WednesdayHours":5,"ThursdayHours":5,"FridayHours":"4","SaturdayHours":0,"SundayHours":0},"oldWeekEntry":{"MondayHours":2,"TuesdayHours":2,"WednesdayHours":5,"ThursdayHours":5,"FridayHours":2,"SaturdayHours":0,"SundayHours":0}}),
                 data: {
                     id: 1,
-//                    extId: 1,
+                    extId: 1,
 //                    firstName: "Grigor",
 //                    lastName: "Dimitrov",
-                    position: "Scripting",
-//                    team : "Future thinking",
-//                    startDate : "05/05/2014",
-//                    birthday: "12/10/1993",
+//                    position: "Scripting",
+                    team : "System one",
+                    startDate : "05/05/2014",
+                    birthday: "12/10/1993",
                     active: "yes"
                 },
 //                headers: {"X-HTTP-Method-Override": "PUT"},
@@ -28,12 +28,13 @@
                 //contentType: "application/json",
                 success: function(response) {
                     console.log(response);
+                    $("#div1").html(response);
                 }
             });
         });
     </script>
 </head>
 <body>
-<div id="div1">sdfsd</div>
+<div id="div1"></div>
 </body>
 </html>
