ALL METHODS WORK NOW

--- a/webroot/testPost.html
+++ b/webroot/testPost.html
@@ -10,16 +10,16 @@
             $.ajax({
                 type: 'POST',
 //                type: 'DELETE',
-//                url: 'http://q1q1.eu/employees/employees/addemployee',
+//                url: 'http://q1q1.eu/employees/employees',
                 url: '../employees',
                 data: {
                     extId: 10,
-                    firstName: "Silvester",
-                    lastName: "Staloun",
-                    position: "DP",
-                    team : "System one",
-                    startDate : "10/08/2015",
-                    birthday: "12/05/1988",
+                    firstName: "Martin",
+                    lastName: "Radevvv",
+                    position: "Charting",
+                    team : "Charting",
+                    startDate : "10/08/2010",
+                    birthday: "12/05/1980",
                     active: "yes"
                 },
                 success: function(response) {
