ALL METHODS WORK NOW

--- a/webroot/testGet.html
+++ b/webroot/testGet.html
@@ -8,9 +8,9 @@
         $(document).ready(function(){
                 $.ajax({
 //                    url: "../employees",
-                    url: "http://q1q1.eu/employees/employees",
-                    type: 'GET',
-                    headers: {"X-Auth-Token": "test1233"}
+                    url: "http://localhost/intranet-api/employees/3",
+                    type: 'DELETE'
+                    //headers: {"X-Auth-Token": "test1233"}
 //                    beforeSend: function(xhr){
 //                        xhr.setRequestHeader('Authorization', 'Basic guest:guest123');
 //                    },
